# rag-template

./: .env  .env.cognee  .env.ollama  .env.retrieval-agent  .gitignore  .gitmodules  APPROACH.md  AZURE_MIGRATION_PLAN.md  LLM_Garden.py  PROJECT_SUMMARY.md  README.md  REQUIREMENTS.md  cognee_visualization.html  cognee_visualization_updated.html  compose.override.yaml  compose.yaml  docker-bake.hcl  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_clean.txt  vector_store.py
.github/workflows/: ci.yml  integration-tests.yml  unit-tests.yml
agent-chat-ui/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml
aixolotl/: main.py  pyproject.toml
aixolotl/tests/: __init__.py  conftest.py
azure-sql-server/: 01-init-company-data.sql  entrypoint.sh
knowledge/: business-development.md  leadership-team.md  recent-activities.md  services-offerings.md
minio/: company-overview.md  entrypoint.sh  industry-focus.md  specializations.md  technology-platform.md
ollama/: entrypoint.sh
ollama/data/: id_ed25519  id_ed25519.pub
rag_agent/: workflow.py
rag_agent/chat/: memory_manager.py  orchestrator_agent.py
rag_agent/ingestion/: sharepoint_ingest.py
rag_agent/retrieval/: sql_agent.py  types.py  vector_agent.py
react-agent/: .env.example  pyproject.toml
retrieval-agent/: .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml
retrieval-agent-template/: .env.example  Dockerfile  pyproject.toml
retrieval-agent-template/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  (+3 more)
(+29 files in other folders)
